<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.jduff.balancingact.DifficultySelect">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/difficulty_instr"
        android:gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        >
        <Button
            android:layout_width="@dimen/dif_sel_width"
            android:layout_height="wrap_content"
            android:onClick="begin_select"
            android:text="@string/beginner"
            android:layout_gravity="center"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/dif_select_space" />
        <Button
            android:layout_width="@dimen/dif_sel_width"
            android:layout_height="wrap_content"
            android:onClick="easy_select"
            android:text="@string/easy"
            android:layout_gravity="center"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/dif_select_space" />
        <Button
            android:layout_width="@dimen/dif_sel_width"
            android:layout_height="wrap_content"
            android:onClick="medium_select"
            android:text="@string/medium"
            android:layout_gravity="center"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/dif_select_space" />
        <Button
            android:layout_width="@dimen/dif_sel_width"
            android:layout_height="wrap_content"
            android:onClick="hard_select"
            android:text="@string/hard"
            android:layout_gravity="center"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/dif_select_space" />
        <Button
            android:layout_width="@dimen/dif_sel_width"
            android:layout_height="wrap_content"
            android:onClick="expert_select"
            android:text="@string/expert"
            android:layout_gravity="center"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/dif_select_space" />
        <Button
            android:layout_width="@dimen/dif_sel_width"
            android:layout_height="wrap_content"
            android:onClick="random_select"
            android:text="@string/random_select_lbl"
            android:layout_gravity="center"/>
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/back"
        android:onClick="backToTitle"/>

</RelativeLayout>
