<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/congratulations_text"
        android:textSize="32sp"
        android:textColor="@color/colorAccent"
        android:gravity="fill_horizontal"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/puzzle_win_details"
        android:gravity="center"
        android:layout_gravity="center"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="27sp"
        android:gravity="center"
        android:layout_gravity="center"
        android:id="@+id/final_time"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_text"
            android:onClick="select_Menu"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_difficulty_text"
            android:onClick="select_Difficulty"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_puzzle_text"
            android:onClick="select_New"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />
    </LinearLayout>
</LinearLayout>