<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context="com.example.jduff.balancingact.TitleScreen">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">
        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />
        <Button
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:id="@+id/play_btn"
            android:text="@string/play_btn_lbl"
            android:layout_gravity="center"
            android:onClick="openDifficultySelect"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />
        <Button
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:id="@+id/tutorial_btn"
            android:text="@string/tutorial_btn_lbl"
            android:layout_gravity="center"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />
        <Button
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:id="@+id/options_btn"
            android:text="@string/options_btn_lbl"
            android:layout_gravity="center"/>

    </LinearLayout>

</FrameLayout>
